overlap fix

--- a/assets/css/styleindex.css
+++ b/assets/css/styleindex.css
@@ -61,13 +61,20 @@ nav {
 	display: inline-block;
 	text-decoration: none;
 	color: white;
-	padding: 10px 20px;
+	padding: 10px 18px;
 	opacity: 0.9;
 	font-family: 'Roboto', sans-serif;
 	margin-left: -20px;
 	margin-right: 20px;
 	font-size: 20px;
 }
+
+#button-box {
+	margin-left: 50%;
+    display: inline-block;
+}
+
+
 
 .footer-item a {
 	display: block;
@@ -89,11 +96,20 @@ nav {
 	font-size: 14px;
 }
 
+.menu-item .sub-item {
+
+}
+
+.menu-item .sub-item:hover {
+	background-color: white;
+	color: #615176;
+	opacity: 0.8;
+}
 
 .menu-item a:hover {
 	/*background-color: rgb(122,89,155);*/
 	/*color: #f2f2f2;*/
-	background-color: white;
+	/*background-color: white;*/
 	color: #615176;
 	opacity: 0.8;
 }
@@ -110,6 +126,7 @@ nav {
 	position: absolute;
 	background-color: #efedf3;
 	visibility: hidden;
+	z-index: 999;
 }
 
 .sub-menu a {
@@ -210,7 +227,7 @@ nav {
 }
 
 #craigs-list {
-	position: fixed;
+  position: fixed;
   /*width: 300px;
   height: 200px;*/
   font-size: 100px;
